--- a/UI.Desktop/FormPrincipal.resx
+++ b/UI.Desktop/FormPrincipal.resx
@@ -4751,4 +4751,7 @@
         3+BCIiIiyje4kIiIiPINLiQiIqJ8gwuJiIgoz6z5/xcIHu951TndAAAAAElFTkSuQmCC
 </value>
   </data>
+  <metadata name="menuStrip1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>17, 17</value>
+  </metadata>
 </root>
